feat: creating analytics (views, scpes routes)

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,7 @@
 <div class="bg-[#F7F7F7]">
-    <div class="container mx-auto pt-28 px-5 ">
+    <div class="container mx-auto pt-14 px-5 ">
         <div class="flex justify-center pb-5">
-            <%= image_tag("/img/logo.png", alt: "Movie Search" )%>
+            <%= image_tag("/img/logo.png", alt: "Movie Search" ) %>
         </div>
 
         <div class="flex justify-center">
@@ -9,7 +9,7 @@
                         data: { controller: "search-form", turbo_frame: "movies" },
                         html: { autocomplete: "off" },
                         class: "w-full flex justify-center") do |f| %>
-                <%= f.text_field :query, class: "py-5 px-4 text-xl md:text-3xl rounded border w-full md:w-3/4 lg:w-2/5 self-center focus:border-transparent focus:ring-1 border-gray-300 ring-gray-100 focus:ring-gray-600 shadow", placeholder: "Search the title of a movie...", data: { action: "input->search-form#search" } %>
+                <%= f.text_field :query, class: "py-5 px-4 text-xl md:text-3xl rounded border w-full md:w-3/4 lg:w-2/5 self-center focus:border-transparent focus:ring-1 border-gray-300 ring-gray-100 focus:ring-gray-600 shadow", autofocus: true, placeholder: "Search the title of a movie...", data: { action: "input->search-form#search" } %>
 
                 <%= button_tag(type: 'submit', class: "py-3 px-3 -ml-14 font-medium text-neutral-900 rounded inline-flex items-center cursor-pointer") do %>
                     <i class='fa-solid fa-magnifying-glass fa-xl text-[#E8676B] hover:opacity-50 transition-all'></i>
@@ -25,8 +25,11 @@
     </div>
 </div>
 
-<div class="overflow-x-hidden bg-[#F7F7F7] -mt-20">
-  <div class="mt-[100px] ml-[-50%] h-[500px] w-[200%] rounded-t-[100%] bg-[#E8676B]">
-    <div class="pt-20 text-center text-2xl text-white">Footer</div>
+<div class="overflow-x-hidden bg-[#F7F7F7] md:-mt-52">
+  <div class="md:mt-[100px] md:ml-[-50%] lg:h-[1200px] xl:h-[900px] md:w-[200%] w-[100%] lg:w-[200%] md:rounded-t-[100%] bg-[#E8676B]">
+    <div class="container mx-auto pt-28 px-5 md:w-[100%] xl:w-[27%]">
+        <%= render "analytics" %>
+        <%= render "layouts/footer" %>
+    </div>
   </div>
 </div>
