feat: fine tuning the UI

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="pt-16 text-white">
+<footer class="py-16 text-white">
   <ul class="flex justify-center">
     <li class="hover:text-zinc-200 px-4">
       <a href='https://devanil.com'><i class="fas fa-blog"></i> Blog</a>
