--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -26,7 +26,7 @@
 </div>
 
 <div class="overflow-x-hidden bg-[#F7F7F7] md:-mt-52">
-  <div class="md:mt-[100px] md:ml-[-50%] lg:h-[1200px] xl:h-[1000px] md:w-[200%] w-[100%] lg:w-[200%] md:rounded-t-[100%] bg-[#E8676B]">
+  <div class="md:mt-[100px] md:ml-[-50%]  md:w-[200%] w-[100%] lg:w-[200%] md:rounded-t-[100%] bg-[#E8676B]">
     <div class="container mx-auto pt-28 px-5 md:w-[100%] xl:w-[27%]">
         <%= render "analytics" %>
         <%= render "layouts/footer" %>
